# naturoinformatics

./: .gitignore  .nojekyll  Makefile  _quarto.yml  index.html  index.qmd  notation.qmd  pyproject.toml  search.json
.github/workflows/: publish.yml
00-intro/: notation.html  notation.qmd
01-quantum-mechanincs/: 0-quantum-mechanics.html  0-quantum-mechanics.qmd  1-wave-function.html  1-wave-function.qmd  2-state-vectors.html  2-state-vectors.qmd  3-schrodinger-equation.html  3-schrodinger-equation.qmd  4-hydrogen-like-ion.html  4-hydrogen-like-ion.qmd  5-basis-sets.html  5-basis-sets.qmd
03-molecular-mechanics/: 0.qmd  1-interactions.html  1-interactions.qmd  2-integration.html  2-integration.qmd  3-micro--and-macroparameters.html  4-force-fields.html  4-force-fields.qmd  5-trajectories.html  5-trajectories.qmd  bond-potential.nb  dipole.ipynb  dipole.nb  verlet.ipynb
05-enhanced-sampling/: 1-metadynamics.html  1-metadynamics.qmd
06-virtual-screening/: 1-docking.html
07-free-energy-calculation/: 1-fep.html  1-fep.qmd  2-alchemy.html  2-alchemy.qmd
08-chemoinformatics/: 1-chemoinformatics.html
11-machine/: 1-transistors.qmd  2-architecture.qmd  3-macine-code.qmd  4-machine-numbers.qmd  5-computations.qmd
3-molecular-mechanics/: 2-integration.qmd  3-micro--and-macroparameters.qmd  4-force-fields.qmd
6-virtual-screening/: 1-docking.qmd
8-chemoinformatics/: 1-chemoinformatics.qmd
assets/: _macros.qmd  custom.scss
docs/: CNAME  index.html  notation.html  search.json
docs/3-molecular-mechanics/: 1-interactions.html  (+4 more)
filters/: notae.py
(+17 files in other folders)
