[tool.poetry]
name = "naturoinformatics"
version = "0.1.0"
description = ""
authors = ["Vsevolod Shegolev <v@sheg.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
panflute = "^2.3.0"
httpcore = "^1.0.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
